<resources>
    <string name="app_name">SneakerHub</string>
    <string name="usuario">Usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="forgot_passwd">¿Olvidó la contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="loginGoogle">Iniciar Sesión con Google</string>
    <string name="Signin">Registrarse</string>
    <string name="SigninGoogle">Registrarse con Google</string>
    <string name="default_web_client_id">161400644046-o8ii7sbidqv65jmajb4l9aslc9e1hvmr.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>